hphp/hack/test/typecheck/expression_trees/method_call_splice_error.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

class Foo {
  public function boo(): void {}
}

function test(): void {
  $x = new Foo();
  Code`${ $x->bar() }`;
}
